# kmobile

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
kmobile-desktop/: Cargo.toml  README.md
kmobile-desktop/examples/: xcode_integration_example.rs
kmobile-desktop/src/: android_studio_integration.rs  app.rs  audio.rs  computer_vision.rs  device_bridge.rs  hardware_emulator.rs  lib.rs  main.rs  ui.rs  xcode_integration.rs
src/: cli.rs  config.rs  device.rs  device_basic.rs  device_bridge.rs  error.rs  hardware_emulator.rs  lib.rs  main.rs  mcp.rs  mcp_server.rs  project.rs  simulator.rs  simulator_basic.rs  testing.rs  utils.rs
src/desktop/: android_studio_integration.rs  app.rs  audio.rs  computer_vision.rs  ui.rs  xcode_integration.rs
