[package]
name = "kmobile"
version = "0.1.0"
edition = "2021"
description = "KMobile - Comprehensive mobile development and testing automation tool"
authors = ["KMobile Team"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kmobile-dev/kmobile"
keywords = ["mobile", "testing", "automation", "cli", "mcp"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI and configuration
clap = { version = "4.4", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
config = "0.14"

# Async runtime and networking
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Process management and system interaction
sysinfo = "0.29"
which = "4.4"

# Logging and error handling
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"

# Device communication
plist = "1.5"
uuid = "1.6"
chrono = { version = "0.4", features = ["serde"] }

# Testing frameworks
mockall = "0.11"
tempfile = "3.8"

# Terminal UI (optional)
crossterm = { version = "0.27", optional = true }
ratatui = { version = "0.24", optional = true }

# MCP protocol (optional - will implement custom)
# mcp = "0.1"
# jsonrpc-core = "18.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
wiremock = "0.5"

[lib]
name = "kmobile"
path = "src/lib.rs"

[[bin]]
name = "kmobile"
path = "src/main.rs"

[[bin]]
name = "kmobile-mcp"
path = "src/mcp_server.rs"

[features]
default = ["cli", "api", "mcp"]
cli = []
api = []
mcp = []
tui = ["crossterm", "ratatui"]