[package]
name = "kmobile"
version = "0.1.0"
edition = "2021"
description = "KMobile - Comprehensive mobile development and testing automation tool"
authors = ["KMobile Team"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kmobile-dev/kmobile"
keywords = ["mobile", "testing", "automation", "cli", "mcp"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI and configuration
clap = { version = "4.4", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
config = "0.14"

# Async runtime and networking
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Process management and system interaction
sysinfo = "0.29"
which = "4.4"

# Logging and error handling
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"

# Device communication
plist = "1.5"
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Testing frameworks
mockall = "0.11"
tempfile = "3.8"

# Terminal UI (optional)
crossterm = { version = "0.27", optional = true }
ratatui = { version = "0.24", optional = true }

# Desktop GUI dependencies (feature-gated)  
eframe = { version = "0.28", optional = true }
egui = { version = "0.28", optional = true }
egui_extras = { version = "0.28", features = ["default"], optional = true }

# Image processing and computer vision (feature-gated)
image = { version = "0.25", optional = true }
imageproc = { version = "0.25", optional = true }
rusttype = { version = "0.9", optional = true }

# Audio processing (feature-gated)
cpal = { version = "0.15", optional = true }
rodio = { version = "0.19", optional = true }
tts = { version = "0.26", optional = true }
hound = { version = "3.5", optional = true }

# Hardware simulation (feature-gated)
winit = { version = "0.30", optional = true }
gilrs = { version = "0.10", optional = true }

# Networking protocols (feature-gated)
tokio-tungstenite = { version = "0.23", optional = true }
futures-util = { version = "0.3", optional = true }

# System integration (feature-gated)
directories = { version = "5.0", optional = true }
dirs = { version = "5.0", optional = true }
env_logger = { version = "0.11", optional = true }
regex = { version = "1.10", optional = true }
rand = "0.9.1"

# MCP protocol (optional - will implement custom)
# mcp = "0.1"
# jsonrpc-core = "18.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
wiremock = "0.5"

[lib]
name = "kmobile"
path = "src/lib.rs"

[[bin]]
name = "kmobile"
path = "src/main.rs"

[[bin]]
name = "kmobile-mcp"
path = "src/mcp_server.rs"

[[bin]]
name = "kmobile-desktop"
path = "src/bin/desktop.rs"
required-features = ["desktop"]

[features]
default = ["cli", "api", "mcp"]
cli = []
api = []
mcp = []
tui = ["crossterm", "ratatui"]
desktop = ["eframe", "egui", "egui_extras", "image", "imageproc", "rusttype", "cpal", "rodio", "tts", "hound", "winit", "gilrs", "tokio-tungstenite", "futures-util", "directories", "dirs", "env_logger", "regex"]
audio = ["cpal", "rodio", "tts", "hound"]
