[package]
name = "kmobile-desktop"
version = "0.1.0"
edition = "2021"
description = "KMobile Desktop - Revolutionary hardware emulation and visual control for mobile devices"
authors = ["KMobile Team"]
license = "MIT"

[dependencies]
# GUI Framework
eframe = "0.28"
egui = "0.28"
egui_extras = { version = "0.28", features = ["default"] }

# Image processing and computer vision  
image = "0.25"
# opencv = { version = "0.92", features = ["opencv-4", "buildtime-bindgen"] }  # Optional - complex to build
imageproc = "0.25"
rusttype = "0.9"

# Audio processing
cpal = "0.15"
rodio = "0.19"
# whisper-rs = "0.10"  # Optional - can be added when needed
tts = { version = "0.26", optional = true }
hound = "3.5"

# Device communication
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }

# Hardware simulation
winit = "0.30"
gilrs = "0.10"  # Gamepad input simulation

# Networking and protocols
tokio-tungstenite = "0.23"
futures-util = "0.3"

# System integration
sysinfo = "0.29"
directories = "5.0"
dirs = "5.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
env_logger = "0.11"

# Utilities
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
which = "6.0"
regex = "1.10"

# Machine Learning (for advanced screen understanding) - Optional for now
# candle-core = "0.5"
# candle-nn = "0.5" 
# candle-transformers = "0.5"

[features]
default = ["audio"]
audio = ["dep:tts"]

[[bin]]
name = "kmobile-desktop"
path = "src/main.rs"

[[example]]
name = "xcode_integration_example"
path = "examples/xcode_integration_example.rs"